// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tool should renders as disabled 1`] = `
<styled.div
  isDisabled={true}
  onClick={[Function]}
>
  <Styled(Tooltip)
    text="Save Schema"
  />
  <Styled(MdSave)
    color="#666"
    name={[Function]}
  />
</styled.div>
`;

exports[`Tool should renders default 1`] = `
<styled.div
  onClick={[Function]}
>
  <Styled(Tooltip)
    text="Save Schema"
  />
  <Styled(MdSave)
    color="#aaa"
    name={[Function]}
  />
</styled.div>
`;
